# larrecodnn

./: CMakeLists.txt
larrecodnn/: CMakeLists.txt
larrecodnn/CVN/interfaces/: PixelMapProducer.cxx  PixelMapProducer.h
larrecodnn/ImageMaker/: SavePiMu_tool.cc
larrecodnn/ImagePatternAlgs/Modules/: CMakeLists.txt  EvaluateROIEff_module.cc  NoiseWaveformDump_module.cc  PointIdEffTest_module.cc  RawWaveformClnSigDump_module.cc  RawWaveformDump_module.cc  WaveformDenoiseTest_module.cc  WaveformRoiFinder_module.cc
larrecodnn/ImagePatternAlgs/Tensorflow/Modules/: PointIdTrainingData_module.cc
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/: PointIdAlg.cxx  PointIdAlg.h
larrecodnn/ImagePatternAlgs/ToolInterfaces/: IWaveformDenoise.h
larrecodnn/NuGraph/: CMakeLists.txt  NuGraphAnalyzer_module.cc  NuGraphInferenceSonicTriton_module.cc  NuGraphInference_module.cc  NuSliceHitsProducer_module.cc  PandoraNuSliceHitsProducer_module.cc  delaunator.hpp  nugraph.fcl  testinference_uB_slice_job.fcl
ups/: product_deps
